--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ persistence-backup.xml
 persistence.xml.backup
 NexmoSmsService.java
 AuthenticationProviderConfig.java
+bfg.jar
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
