--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
     <maven>3.5</maven>
   </prerequisites>
   <dependencies>
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/javax/javaee-api &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>javax</groupId>-->
+      <!--<artifactId>javaee-api</artifactId>-->
+      <!--<version>8.0</version>-->
+    <!--</dependency>-->
+
     <!-- Compile/runtime dependencies -->
     <dependency>
       <groupId>com.google.appengine</groupId>
