--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,8 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  <!--<mime-mapping>-->
+    <!--<extension>css</extension>-->
+    <!--<mime-type>text/css</mime-type>-->
+  <!--</mime-mapping>-->
 </web-app>
